static/css/base.css
html {
    height: 100%;
}

body {
    background: url('/media/stanislav-kondratiev-6pO3QFkk7hQ-unsplash.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Open Sans', sans-serif;}

.navigation-bar {
    padding: 0;
}

.header-container {
        margin-top: 164px;
    }


/* -------------------------------- Media Queries */

/* Icons in main navbar to align center on larger screens*/

@media (min-width: 900px) {
.icon {
    text-align: center;
}

